--- a/.github/ISSUE_TEMPLATE/bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yml
@@ -6,7 +6,7 @@ body:
 - type: markdown
   attributes:
     value: |
-      Please [search for existing issues](https://github.com/belazor-wow/ItemUpgradeTip/issues) before creating a new one.
+      Please [search for existing issues](https://github.com/belazor-wow/ItemUpgradeTip-GW2UI/issues) before creating a new one.
 
 - type: textarea
   attributes:
@@ -28,7 +28,7 @@ body:
  
 - type: input
   attributes:
-    label: ItemUpgradeTip Version
+    label: ItemUpgradeTip-GW2UI Version
     description: |
       You can see the current version in the CurseForge app or similar
     placeholder: "1.0.0"
@@ -39,8 +39,8 @@ body:
 - type: dropdown
   id: testing
   attributes:
-    label: Tested with only ItemUpgradeTip
-    description: Did you try having ItemUpgradeTip as the only enabled addos and everything else (especially something like ElvUI) disabled?
+    label: Tested with only ItemUpgradeTip-GW2UI
+    description: Did you try having ItemUpgradeTip-GW2UI as the only enabled addos and everything else (especially something like ElvUI) disabled?
     options:
       - "Yes"
       - "No"
